# taskhub

./: pyproject.toml  ruff.toml
app/: main.py
app/api/: dependencies.py  router.py
app/api/v1/: auth.py  health.py  projects.py  tasks.py  users.py
app/api/v2/: users.py
app/core/: config.py  logging.py  security.py
app/db/: database.py  dependencies.py
app/exceptions/: __init__.py  base.py  project.py  task.py  user.py
app/middlewares/: exceptions.py
app/models/: project.py  task.py  user.py
app/repositories/: base.py  project.py  task.py  user.py
app/schemas/: auth.py  pagination.py  project.py  task.py  user.py  user_login.py
app/schemas/v2/: user.py
app/services/: password.py  project_service.py  task_service.py  token.py  user_service.py
migrations/: env.py
migrations/versions/: 77e84ee38830_add_indexes_for_foreign_keys.py  a0878f5b2797_mensaje_de_la_migracion.py  fd08c63ad345_initial_schema.py
scripts/: n_plus_one_demo.py
tests/: conftest.py
tests/integration/api/: test_auth.py  test_projects.py  test_tasks.py  test_users.py
tests/integration/repositories/: test_project_repository.py  test_task_repository.py  test_user_repository.py
tests/unit/: test_password_service.py
tests/unit/services/: test_project_service.py  test_task_service.py  test_user_service.py
